--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl:
   flutter_slidable: ^1.2.0
+  # Shared preferences plugin
+  # Wraps platform-specific persistent storage for simple data.
+  # Data may be persisted to disk asynchronously, and there is no guarantee that
+  # writes will be persisted to disk after returning, so this plugin must not be
+  # used for storing critical data
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
